# aigenpath01

./: .env.example  .replit  README.md  app.py  demo_data.json  demo_users.json  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
ai_services/: __init__.py  enhanced_mcp_integration.py  gemini_client.py  langchain_integration.py  mcp_integration.py
attached_assets/: Pasted-Project-Description-Title-Learning-Path-Generator-with-Model-Context-Protocol-Introduction-Stude-1758643480998_1758643480998.txt
auth/: __init__.py  firebase_auth.py
config/: __init__.py  firebase_config.py  settings.py
database/: __init__.py  firestore_client.py
integrations/: __init__.py  drive_client.py  elevenlabs_client.py  twilio_client.py  youtube_client.py
local_documents/: communication_skill_learning_path.txt  python_programming_learning_path.txt
pages/: api_key_management.py
services/: learning_service.py  notification_service.py
utils/: helpers.py
